using System;

namespace BlazorApp.Entities;

public class Language
{
    public string Code { get; set; } = string.Empty;
    public string Name { get; set; } = string.Empty;
}